[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Level0.gd" type="Script" id=1]
[ext_resource path="res://Levels/Environment/snowwall.tres" type="TileSet" id=2]
[ext_resource path="res://Levels/Environment/grass.tres" type="TileSet" id=3]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Cheese.tscn" type="PackedScene" id=5]

[node name="Level0" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 65536, 0, 0, 65544, 0, 0, 65552, 0, 0, 131072, 0, 0, 131080, 0, 0, 131088, 0, 0, 196608, 0, 0, 196612, 0, 0, 196616, 0, 0, 196620, 0, 0, 196624, 0, 0, 262144, 0, 0, 262148, 0, 0, 262152, 0, 0, 262156, 0, 0, 262160, 0, 0, 327680, 0, 0, 327684, 0, 0, 327688, 0, 0, 327692, 0, 0, 327696, 0, 0, 393216, 0, 0, 393220, 0, 0, 393224, 0, 0, 393228, 0, 0, 393232, 0, 0, 458752, 0, 0, 458756, 0, 0, 458760, 0, 0, 458764, 0, 0, 458768, 0, 0, 524288, 0, 0, 524292, 0, 0, 524296, 0, 0, 524300, 0, 0, 524304, 0, 0, 589824, 0, 0, 589828, 0, 0, 589836, 0, 0, 589840, 0, 0, 655360, 0, 0, 655364, 0, 0, 655372, 0, 0, 655376, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 0, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 0, 0, 131072, 0, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 0, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 0, 0, 196608, 0, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 0, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 0, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 0, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 0, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 0, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 0, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 0, 0, 327680, 0, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 0, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 0, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 0, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 0, 0, 393216, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 0, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 0, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 0, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 0, 0, 458752, 0, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 0, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 0, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 0, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 0, 0, 524288, 0, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 0, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 0, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 0, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 0, 0, 589824, 0, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 0, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 0, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 0, 0, 655360, 0, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 0, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 0, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 37.3, 151.4 )

[node name="Cheese" parent="." instance=ExtResource( 5 )]
position = Vector2( 230.5, 150.4 )

[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="success" from="Cheese" to="." method="_on_Cheese_success"]
